|
Quick Lists
|
|
Bug ID:
|
6670459
|
|
Votes
|
0
|
|
Synopsis
|
Fix Node::dump() performance
|
|
Category
|
hotspot:compiler2
|
|
Reported Against
|
|
|
Release Fixed
|
hs12(b02)
|
|
State
|
10-Fix Delivered,
bug
|
|
Priority:
|
5-Very Low
|
|
Related Bugs
|
6614330
|
|
Submit Date
|
03-MAR-2008
|
|
Description
|
The fix for 6614330 introduced a performance problem in Node::dump() when
whole graph is dumping (it takes forever to dump it).
Posted Date : 2008-03-03 17:08:58.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
See Description.
Posted Date : 2008-03-07 15:44:41.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |