6670459: Fix Node::dump() performance

Dump full ideal graph takes forever.

Reviewed-by: never, rasbold